# account

./: .gitignore  Cargo.toml  Config.toml  build.sh
aqua/: account.aqua
builtins/: account_config.json  blueprint.json
configs/: deploy-cfg.json
scripts/: deploy.sh
src/: db.rs  keypair.rs  main.rs
types/: Cargo.toml
types/src/: lib.rs  record.rs  results.rs
