[package]
name = "account"
version = "0.1.0"
authors = ["saifiikmal <saifi.ikmal@gmail.com>"]
edition = "2018"

[[bin]]
name = "account"
path = "src/main.rs"

[dependencies]
marine-rs-sdk = { version = "0.7.1", features = ["logger"] }
marine-sqlite-connector = "0.6.0"
eyre = "0.6.5"
log = "0.4.14"
serde_json = "1.0.64"
ed25519-compact = "2"
base64 = "0.20.0"
types = { path = "./types" }

[dev-dependencies]
marine-rs-sdk-test = "0.8.1"
